--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "slicemachine": "start-slicemachine",
     "test": "jest --watchAll",
     "coverage": "jest --coverage"
   },
@@ -17,10 +18,12 @@
     "@prismicio/types": "^0.1.27",
     "date-fns": "^2.19.0",
     "next": "10.0.7",
-    "prismic-dom": "^2.2.5",
+    "prismic-cli": "3.5.0",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
+    "slice-machine-ui": "0.7.0",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
